--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -1,16 +1,12 @@
-version: '3.7'
+version: "3.7"
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: ./app
     restart: on-failure
-    env_file:
-      - .env
     volumes:
       - ./:/code
     ports:
-      - "${APP_PORT}:5000"
+      - "5000:5000"
     depends_on:
       - mysql
 
@@ -18,14 +14,12 @@ services:
     image: mysql:8
     command: --default-authentication-plugin=mysql_native_password
     restart: always
-    env_file:
-      - .env
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_DATABASE: survey
+      MYSQL_USER: ductt
+      MYSQL_PASSWORD: 123456
     volumes:
       - ./volumes/mysql:/var/lib/mysql
     ports:
-      - '${MYSQL_FORWARD_PORT}:3306'
+      - "3308:3306"
