Update default layout

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,10 +29,20 @@
     "@angular/platform-browser-dynamic": "^8.1.0",
     "@angular/router": "^8.1.0",
     "@ngx-translate/core": "^11.0.1",
+    "@types/jquery": "^3.3.31",
+    "bootstrap": "^3.4.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "ng-zorro-antd": "^8.2.1",
     "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "^6.5.2",
+    "screenfull": "^4.2.1",
+    "survey-analytics": "^1.1.5",
+    "survey-angular": "latest",
+    "survey-creator": "latest",
+    "survey-knockout": "latest",
+    "survey-pdf": "^1.0.98",
+    "surveyjs-widgets": "latest",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
