--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -33,8 +33,14 @@
                 "output": "/assets/"
               }
             ],
-            "styles": ["src/main.scss"],
-            "scripts": []
+            "styles": [
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "src/main.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/survey-angular/survey.css",
+              "node_modules/survey-creator/survey-creator.css"
+            ],
+            "scripts": ["node_modules/jquery/dist/jquery.js"]
           },
           "configurations": {
             "production": {
@@ -98,7 +104,12 @@
             "tsConfig": "tsconfig.spec.json",
             "scripts": [],
             "styles": ["src/main.scss"],
-            "assets": ["src/favicon.ico", "src/apple-touch-icon.png", "src/robots.txt", "src/assets"]
+            "assets": [
+              "src/favicon.ico",
+              "src/apple-touch-icon.png",
+              "src/robots.txt",
+              "src/assets"
+            ]
           },
           "configurations": {
             "ci": {
